# summarize

./: .env.example  .gitignore  CLAUDE.md  README.md  cleanup.sh  summarize.py
api/: .gitignore  README.md  app.py  config.py  daemon.py  downloader.py  helpers.py  logger.py  model.py  pyproject.toml  server.py  summarizer.py  test.py  transcriber.py
frontend/: .env.local  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: SummaryPanel.js  VideoForm.js  VideoTable.js
frontend/hooks/: useVideos.js
frontend/utils/: api.js
gpt-summarize/: go.mod  gpt-summarize.go
